--- a/package.json
+++ b/package.json
@@ -4,15 +4,22 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rollup -c"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^25.0.4",
+    "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.2.1",
+    "@types/download": "^8.0.2",
+    "prettier": "3.0.3",
     "rollup": "^3.29.0",
     "rollup-plugin-typescript2": "^0.35.0",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "download": "^8.0.0"
   }
 }
